M04L05 init CatalogRestController